thermostat-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: thermostat-mysql
spec:
  selector:
    app: thermostat-mysql
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thermostat-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thermostat-mysql
  template:
    metadata:
      labels:
        app: thermostat-mysql
    spec:
      containers:
        - name: thermostat-mysql
          image: registry.redhat.io/rhel9/mysql-80:9.7
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: thermostat-mysql-data
              mountPath: /var/lib/mysql
      volumes:
        - name: thermostat-mysql-data
          persistentVolumeClaim:
            claimName: thermostat-mysql-pvc
