deployment-temperature-sensor-spring.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: temperature-sensor-spring
  annotations:
    image.openshift.io/triggers: >
      [{"from":{"kind":"ImageStreamTag","name":"temperature-sensor-spring:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"temperature-sensor-spring\")].image"}]
spec:
  replicas: 1
  selector:
    matchLabels:
      app: temperature-sensor-spring
  template:
    metadata:
      labels:
        app: temperature-sensor-spring
    spec:
      containers:
        - name: temperature-sensor-spring
          image: temperature-sensor-spring:latest
          ports:
            - name: http
              containerPort: 8080
            - name: debug
              containerPort: 5005
---
apiVersion: v1
kind: Service
metadata:
  name: temperature-sensor-spring
spec:
  selector:
    app: temperature-sensor-spring
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: temperature-sensor-spring
spec:
  to:
    kind: Service
    name: temperature-sensor-spring
  port:
    targetPort: http
  tls:
    termination: edge
