deployment-thermostat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thermostat
  annotations:
    image.openshift.io/triggers: >
      [{"from":{"kind":"ImageStreamTag","name":"thermostat:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"thermostat\")].image"}]
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thermostat
  template:
    metadata:
      labels:
        app: thermostat
    spec:
      containers:
        - name: thermostat
          image: thermostat:latest
          ports:
            - name: http
              containerPort: 8080
            - name: debug
              containerPort: 5005
---
apiVersion: v1
kind: Service
metadata:
  name: thermostat
spec:
  selector:
    app: thermostat
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: thermostat
spec:
  to:
    kind: Service
    name: thermostat
  port:
    targetPort: http
  tls:
    termination: edge
